Adding new ENV doe Grid Pow

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ MQTT_CLIENTID=ruby_client
 
 # MQTT Topics
 MQTT_TOPIC_HOUSE_POW=senec/0/ENERGY/GUI_HOUSE_POW
+MQTT_TOPIC_GRID_POW=senec/0/ENERGY/GUI_GRID_POW
 
 #InfluxSetting
 INFLUX_HOST=http://192.168.1.30:8086 #both host and port!
