added required features for evcc compatibility new configuration options added to - reverse decision on when to use positive or negative fields - write only positive values

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ INFLUX_HOST=http://192.168.1.30:8086 #both host and port!
 INFLUX_TOKEN=my_token
 INFLUX_ORG=solectrus
 INFLUX_BUCKET=SENEC-TEST
+
+#invert Battery and Grid Power value mapping, set "true" to activate
+FLIP_POS_NEG_PWR=false
+#only store absolute values, i.e. negatives become positives
+ABS_VALUE_ONLY=false
