- enhance power inversion logic. Now treats battery and grid separately - adjusted .env example for evcc to use home battery SOC, not the vehicle

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ INFLUX_ORG=solectrus
 INFLUX_BUCKET=SENEC-TEST
 
 #invert Battery and Grid Power value mapping, set "true" to activate
-FLIP_POS_NEG_PWR=false
+FLIP_POS_NEG_PWR_GRID=false
+FLIP_POS_NEG_PWR_BATT=false
+
 #only store absolute values, i.e. negatives become positives
 ABS_VALUE_ONLY=false
