add support for writing artificial zero fields

--- a/.env.evcc.example
+++ b/.env.evcc.example
@@ -30,3 +30,5 @@ FLIP_POS_NEG_PWR_BATT=true
 #only store absolute values, i.e. negatives become positives
 ABS_VALUE_ONLY=true
 
+#write artifical zero values into unused BAT_POWER and GRID_POWER fields
+WRITE_ZEROS=true
