--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ FLIP_POS_NEG_PWR_BATT=false
 
 #only store absolute values, i.e. negatives become positives
 ABS_VALUE_ONLY=false
+
+#write artifical zero values into unused BAT_POWER and GRID_POWER fields
+WRITE_ZEROS=true
