--- a/.env.test
+++ b/.env.test
@@ -1,15 +1,11 @@
-#####  MQTT Broker credentials
-
-MQTT_HOST=my-mqtt-broker.local
-MQTT_PORT=1883
+# MQTT Broker credentials
+MQTT_HOST=localhost
+MQTT_PORT=1888
 MQTT_SSL=false
 MQTT_USERNAME=my-username
 MQTT_PASSWORD=my-password
 
-##### MQTT Topics
-
-# Example 1: For ioBroker with SENEC adapter
-#
+# MQTT Topics
 MQTT_TOPIC_HOUSE_POW=senec/0/ENERGY/GUI_HOUSE_POW
 MQTT_TOPIC_GRID_POW=senec/0/ENERGY/GUI_GRID_POW
 MQTT_TOPIC_BAT_CHARGE_CURRENT=senec/0/ENERGY/GUI_BAT_DATA_CURRENT
@@ -24,16 +20,7 @@ MQTT_TOPIC_MPP3_POWER=senec/0/PV1/MPP_POWER/2
 MQTT_TOPIC_INVERTER_POWER=senec/0/ENERGY/GUI_INVERTER_POWER
 MQTT_TOPIC_WALLBOX_CHARGE_POWER=senec/0/WALLBOX/APPARENT_CHARGING_POWER/0
 
-# Example 2: For evcc
-# MQTT_TOPIC_HOUSE_POW=evcc/site/homePower
-# MQTT_TOPIC_GRID_POW=evcc/site/gridPower
-# MQTT_TOPIC_BAT_FUEL_CHARGE=evcc/site/batterySoc
-# MQTT_TOPIC_BAT_POWER=evcc/site/batteryPower
-# MQTT_TOPIC_INVERTER_POWER=evcc/site/pvPower
-# MQTT_TOPIC_WALLBOX_CHARGE_POWER=evcc/loadpoints/1/chargePower
-# MQTT_FLIP_BAT_POWER=true
-
-##### InfluxDB credentials
+# InfluxDB credentials
 INFLUX_HOST=localhost
 INFLUX_SCHEMA=http
 INFLUX_PORT=8086
