--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -70,6 +70,9 @@ jobs:
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
+        env:
+          CR_PAT: ${{ secrets.CR_PAT }}
+        if: ${{ env.CR_PAT != '' }}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -77,10 +80,12 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v4
+        env:
+          CR_PAT: ${{ secrets.CR_PAT }}
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
+          push: ${{ env.CR_PAT != '' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
