--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,12 +3,12 @@ name: Continuous integration
 on:
   push:
     branches:
-      - main
+      - develop
     tags:
       - v*
   pull_request:
     branches:
-      - main
+      - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
