--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ Style/FrozenStringLiteralComment:
 Metrics/MethodLength:
   Max: 20
 
+Metrics/ClassLength:
+  Max: 200
+
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: consistent_comma
 
