Allow flipping GRID_POW values

--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,14 @@ MQTT_TOPIC_POWER_RATIO=senec/0/PV1/POWER_RATIO
 # MQTT_TOPIC_BAT_POWER=evcc/site/batteryPower
 # MQTT_TOPIC_INVERTER_POWER=evcc/site/pvPower
 # MQTT_TOPIC_WALLBOX_CHARGE_POWER=evcc/loadpoints/1/chargePower
+
+##### MQTT Options
+
+# Flip battery power (reverse the sign)
 # MQTT_FLIP_BAT_POWER=true
+#
+# Optional: Flip grid power (reverse the sign)
+# MQTT_FLIP_GRID_POW=true
 
 ##### InfluxDB credentials
 INFLUX_HOST=localhost
