--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ MQTT_TOPIC_WALLBOX_CHARGE_POWER1=senec/0/WALLBOX/APPARENT_CHARGING_POWER/1
 MQTT_TOPIC_WALLBOX_CHARGE_POWER2=senec/0/WALLBOX/APPARENT_CHARGING_POWER/2
 MQTT_TOPIC_WALLBOX_CHARGE_POWER3=senec/0/WALLBOX/APPARENT_CHARGING_POWER/3
 MQTT_TOPIC_POWER_RATIO=senec/0/PV1/POWER_RATIO
+MQTT_TOPIC_HEATPUMP_POWER=somewhere/HEATPUMP/POWER
 
 # Example 2: For evcc
 # MQTT_TOPIC_HOUSE_POW=evcc/site/homePower
@@ -34,6 +35,7 @@ MQTT_TOPIC_POWER_RATIO=senec/0/PV1/POWER_RATIO
 # MQTT_TOPIC_BAT_POWER=evcc/site/batteryPower
 # MQTT_TOPIC_INVERTER_POWER=evcc/site/pvPower
 # MQTT_TOPIC_WALLBOX_CHARGE_POWER=evcc/loadpoints/1/chargePower
+# MQTT_TOPIC_HEATPUMP_POWER=somewhere/HEATPUMP/POWER
 
 ##### MQTT Options
 
