--- a/.env.test
+++ b/.env.test
@@ -21,6 +21,7 @@ MQTT_TOPIC_WALLBOX_CHARGE_POWER1=senec/0/WALLBOX/APPARENT_CHARGING_POWER/1
 MQTT_TOPIC_WALLBOX_CHARGE_POWER2=senec/0/WALLBOX/APPARENT_CHARGING_POWER/2
 MQTT_TOPIC_WALLBOX_CHARGE_POWER3=senec/0/WALLBOX/APPARENT_CHARGING_POWER/3
 MQTT_TOPIC_POWER_RATIO=senec/0/PV1/POWER_RATIO
+MQTT_TOPIC_HEATPUMP_POWER=somewhere/HEATPUMP/POWER
 
 # InfluxDB credentials
 INFLUX_HOST=localhost
