--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,7 +35,7 @@ jobs:
         run: bundle exec rubocop
 
       - name: Run tests
-        run: bundle exec rake test
+        run: bundle exec rake spec
 
       - name: Send test coverage to CodeClimate
         uses: paambaati/codeclimate-action@v5.0.0
