--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 require:
-  - rubocop-minitest
+  - rubocop-rspec
   - rubocop-rake
   - rubocop-performance
 
@@ -10,26 +10,52 @@ AllCops:
     - 'vendor/**/*'
   NewCops: enable
 
+# Layout
+
+Layout/LineLength:
+  Max: 130
+
+Layout/LineEndStringConcatenationIndentation:
+  Enabled: false
+
+# Metrics
+
+Metrics/AbcSize:
+  Max: 18
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 20
+
+# Style
+
 Style/Documentation:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Metrics/MethodLength:
-  Max: 20
-
-Metrics/ClassLength:
-  Max: 200
-
 Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: consistent_comma
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: consistent_comma
 
-Layout/LineEndStringConcatenationIndentation:
+# RSpec
+
+RSpec/ExampleLength:
+  Max: 20
+
+RSpec/NestedGroups:
+  Max: 4
+
+RSpec/NoExpectationExample:
   Enabled: false
 
-Layout/FirstArrayElementIndentation:
+RSpec/MultipleExpectations:
   Enabled: false
