Introduce custom mappings

--- a/.env.test
+++ b/.env.test
@@ -6,22 +6,59 @@ MQTT_USERNAME=my-username
 MQTT_PASSWORD=my-password
 
 # MQTT Topics
-MQTT_TOPIC_HOUSE_POW=senec/0/ENERGY/GUI_HOUSE_POW
-MQTT_TOPIC_GRID_POW=senec/0/ENERGY/GUI_GRID_POW
-MQTT_TOPIC_BAT_FUEL_CHARGE=senec/0/ENERGY/GUI_BAT_DATA_FUEL_CHARGE
-MQTT_TOPIC_BAT_POWER=senec/0/ENERGY/GUI_BAT_DATA_POWER
-MQTT_TOPIC_CASE_TEMP=senec/0/TEMPMEASURE/CASE_TEMP
-MQTT_TOPIC_CURRENT_STATE=senec/0/ENERGY/STAT_STATE_Text
-MQTT_TOPIC_MPP1_POWER=senec/0/PV1/MPP_POWER/0
-MQTT_TOPIC_MPP2_POWER=senec/0/PV1/MPP_POWER/1
-MQTT_TOPIC_MPP3_POWER=senec/0/PV1/MPP_POWER/2
-MQTT_TOPIC_INVERTER_POWER=senec/0/ENERGY/GUI_INVERTER_POWER
-MQTT_TOPIC_WALLBOX_CHARGE_POWER0=senec/0/WALLBOX/APPARENT_CHARGING_POWER/0
-MQTT_TOPIC_WALLBOX_CHARGE_POWER1=senec/0/WALLBOX/APPARENT_CHARGING_POWER/1
-MQTT_TOPIC_WALLBOX_CHARGE_POWER2=senec/0/WALLBOX/APPARENT_CHARGING_POWER/2
-MQTT_TOPIC_WALLBOX_CHARGE_POWER3=senec/0/WALLBOX/APPARENT_CHARGING_POWER/3
-MQTT_TOPIC_POWER_RATIO=senec/0/PV1/POWER_RATIO
-MQTT_TOPIC_HEATPUMP_POWER=somewhere/HEATPUMP/POWER
+MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
+MAPPING_0_MEASUREMENT=PV
+MAPPING_0_FIELD=inverter_power
+MAPPING_0_TYPE=integer
+#
+MAPPING_1_TOPIC=senec/0/ENERGY/GUI_HOUSE_POW
+MAPPING_1_MEASUREMENT=PV
+MAPPING_1_FIELD=house_power
+MAPPING_1_TYPE=integer
+#
+MAPPING_2_TOPIC=senec/0/ENERGY/GUI_GRID_POW
+MAPPING_2_MEASUREMENT_POSITIVE=PV
+MAPPING_2_MEASUREMENT_NEGATIVE=PV
+MAPPING_2_FIELD_POSITIVE=grid_import_power
+MAPPING_2_FIELD_NEGATIVE=grid_export_power
+MAPPING_2_TYPE=integer
+#
+MAPPING_3_TOPIC=senec/0/PV1/POWER_RATIO
+MAPPING_3_MEASUREMENT=PV
+MAPPING_3_FIELD=grid_export_limit
+MAPPING_3_TYPE=float
+#
+MAPPING_4_TOPIC=senec/0/ENERGY/GUI_BAT_DATA_POWER
+MAPPING_4_MEASUREMENT_POSITIVE=PV
+MAPPING_4_MEASUREMENT_NEGATIVE=PV
+MAPPING_4_FIELD_POSITIVE=battery_charging_power
+MAPPING_4_FIELD_NEGATIVE=battery_discharging_power
+MAPPING_4_TYPE=integer
+#
+MAPPING_5_TOPIC=senec/0/ENERGY/GUI_BAT_DATA_FUEL_CHARGE
+MAPPING_5_MEASUREMENT=PV
+MAPPING_5_FIELD=battery_soc
+MAPPING_5_TYPE=float
+#
+MAPPING_6_TOPIC=senec/0/WALLBOX/APPARENT_CHARGING_POWER/0
+MAPPING_6_MEASUREMENT=PV
+MAPPING_6_FIELD=wallbox_power
+MAPPING_6_TYPE=integer
+#
+MAPPING_7_TOPIC=somewhere/HEATPUMP/POWER
+MAPPING_7_MEASUREMENT=HEATPUMP
+MAPPING_7_FIELD=power
+MAPPING_7_TYPE=integer
+#
+MAPPING_8_TOPIC=senec/0/TEMPMEASURE/CASE_TEMP
+MAPPING_8_MEASUREMENT=PV
+MAPPING_8_FIELD=case_temp
+MAPPING_8_TYPE=float
+#
+MAPPING_9_TOPIC=senec/0/ENERGY/STAT_STATE_Text
+MAPPING_9_MEASUREMENT=PV
+MAPPING_9_FIELD=system_status
+MAPPING_9_TYPE=string
 
 # InfluxDB credentials
 INFLUX_HOST=localhost
@@ -30,4 +67,3 @@ INFLUX_PORT=8086
 INFLUX_TOKEN=my-token
 INFLUX_ORG=my-org
 INFLUX_BUCKET=my-bucket
-INFLUX_MEASUREMENT=my-measurement
