Add JSON mapping

--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,16 @@ MQTT_PASSWORD=my-mqtt-password
 # You can define multiple mappings. Each mapping is defined by multiple environment variables.
 # Each variables starts with the MAPPING_X_ prefix, where X is a number starting from 0.
 #
-# A mapping is defined by a topic, a measurement with field (or two depending on its sign) and a type.
-# The topic is the MQTT topic to subscribe to.
-# The measurement is the name of the InfluxDB measurement to write to.
-# The field is the name of the InfluxDB field to write to.
-# The type is the data type of the field. It can be one of integer, float, string or boolean.
+# A mapping is defined by a topic, a measurement with field (or two depending on its sign),
+# a type and optionally a json_key.
 #
-# Example:
+# - The topic is the MQTT topic to subscribe to.
+# - The json_key is the key in the JSON payload to extract the value from (optional, only for JSON payloads)
+# - The measurement is the name of the InfluxDB measurement to write to.
+# - The field is the name of the InfluxDB field to write to.
+# - The type is the data type of the field. It can be one of integer, float, string or boolean.
+#
+# Basic example:
 #   MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
 #   MAPPING_0_MEASUREMENT=PV
 #   MAPPING_0_FIELD=inverter_power
@@ -33,6 +36,22 @@ MQTT_PASSWORD=my-mqtt-password
 #   MAPPING_1_FIELD_POSITIVE=grid_import_power
 #   MAPPING_1_FIELD_NEGATIVE=grid_export_power
 #   MAPPING_1_TYPE=float
+#
+# JSON example:
+#   MAPPING_0_TOPIC=my/little/nuclear/plant
+#   MAPPING_0_JSON_KEY=radiation_level
+#   MAPPING_0_MEASUREMENT=nuclear_power_plant
+#   MAPPING_0_FIELD=radiation_level
+#   MAPPING_0_TYPE=float
+#
+#   MAPPING_1_TOPIC=my/little/nuclear/plant
+#   MAPPING_1_JSON_KEY=reactivity
+#   MAPPING_1_MEASUREMENT=nuclear_power_plant
+#   MAPPING_1_FIELD=reactivity
+#   MAPPING_1_TYPE=float
+#
+#  This extracts value from a payload like "{"radiation_level": 90.5, "reactivity": 0.7}
+#  Note that in this example the same topic is used for both mappings, but different json_keys are used.
 
 MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
 MAPPING_0_MEASUREMENT=PV
