Allow calculations with JSON_FORMULA

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ MQTT_PASSWORD=my-mqtt-password
 #
 # - The topic is the MQTT topic to subscribe to.
 # - The json_key is the key in the JSON payload to extract the value from (optional, only for JSON payloads)
+# - The json_formula can calculate by using a formular from the values in the JSON payload)
 # - The measurement is the name of the InfluxDB measurement to write to.
 # - The field is the name of the InfluxDB field to write to.
 # - The type is the data type of the field. It can be one of integer, float, string or boolean.
@@ -50,8 +51,20 @@ MQTT_PASSWORD=my-mqtt-password
 #   MAPPING_1_FIELD=reactivity
 #   MAPPING_1_TYPE=float
 #
-#  This extracts value from a payload like "{"radiation_level": 90.5, "reactivity": 0.7}
-#  Note that in this example the same topic is used for both mappings, but different json_keys are used.
+#   MAPPING_2_TOPIC=my/little/nuclear/plant
+#   MAPPING_2_JSON_FORMULA="round({reactivity} * {radiation_level}) + 42"
+#   MAPPING_2_MEASUREMENT=nuclear_power_plant
+#   MAPPING_2_FIELD=danger_level
+#   MAPPING_2_TYPE=float
+#
+# This extracts value from a payload like "{"radiation_level": 90.5, "reactivity": 0.7} and does the calculation
+#
+# Please note:
+# - The curly braces are used to reference specific keys in the JSON payload
+# - The same topic is used for multiple mappings, but different json_keys (or json_formula) are used.
+#
+# For operators allowed in formulas see here:
+# https://github.com/rubysolo/dentaku?tab=readme-ov-file#built-in-operators-and-functions
 
 MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
 MAPPING_0_MEASUREMENT=PV
