--- a/.env.example
+++ b/.env.example
@@ -10,27 +10,34 @@ MQTT_PASSWORD=my-mqtt-password
 # You can define multiple mappings. Each mapping is defined by multiple environment variables.
 # Each variables starts with the MAPPING_X_ prefix, where X is a number starting from 0.
 #
-# A mapping is defined by a topic, a measurement with field (or two depending on its sign),
-# a type and optionally a json_key.
+# A mapping defines how to get data from an MQTT message and where to write it to in InfluxDB.
+# At least if requires the topic name, the measurement name, the field name and the data type.
+# It allows to handle positive and negative values differently, and allows to handle JSON payloads.
 #
-# - The topic is the MQTT topic to subscribe to.
-# - The json_key is the key in the JSON payload to extract the value from (optional, only for JSON payloads)
-# - The json_formula can calculate by using a formular from the values in the JSON payload)
-# - The measurement is the name of the InfluxDB measurement to write to.
-# - The field is the name of the InfluxDB field to write to.
-# - The type is the data type of the field. It can be one of integer, float, string or boolean.
+# Allowed environment variables for each mapping are:
 #
-# Basic example:
+# - MAPPING_X_TOPIC: the MQTT topic to subscribe to
+# - MAPPING_X_MEASUREMENT: the name of the InfluxDB measurement to write to
+# - MAPPING_X_MEASUREMENT_POSITIVE: the name of the InfluxDB measurement to write to for positive values (optional)
+# - MAPPING_X_MEASUREMENT_NEGATIVE: the name of the InfluxDB measurement to write to for negative values (optional)
+# - MAPPING_X_FIELD: the name of the InfluxDB field to write to
+# - MAPPING_X_FIELD_POSITIVE: the name of the InfluxDB field to write to for positive values (optional)
+# - MAPPING_X_FIELD_NEGATIVE: the name of the InfluxDB field to write to for negative values (optional)
+# - MAPPING_X_TYPE: the data type of the field. It can be one of integer, float, string or boolean
+# - MAPPING_X_JSON_KEY: the key in the JSON payload to extract the value from (optional, only for JSON payloads)
+# - MAPPING_X_JSON_PATH: the JSONPath in the JSON payload to extract the value from (optional, only for JSON payloads)
+# - MAPPING_X_JSON_FORMULA: a formula to calculate the value from the JSON payload (optional, only for JSON payloads)
+#
+#
+# Here are some examples of mappings:
+#
+# Basic mapping:
 #   MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
 #   MAPPING_0_MEASUREMENT=PV
 #   MAPPING_0_FIELD=inverter_power
 #   MAPPING_0_TYPE=float
 #
-# To handle positive and negative values differently, you can define two fields and measurements,
-# one for positive values and one for negative values. The mapper
-# will write absolute values in the defined field depending on the sign of the value.
-#
-# Example:
+# Mapping with positive and negative values:
 #   MAPPING_1_TOPIC=senec/0/ENERGY/GUI_GRID_POW
 #   MAPPING_1_MEASUREMENT_POSITIVE=PV
 #   MAPPING_1_MEASUREMENT_NEGATIVE=PV
@@ -38,29 +45,52 @@ MQTT_PASSWORD=my-mqtt-password
 #   MAPPING_1_FIELD_NEGATIVE=grid_export_power
 #   MAPPING_1_TYPE=float
 #
-# JSON example:
-#   MAPPING_0_TOPIC=my/little/nuclear/plant
-#   MAPPING_0_JSON_KEY=radiation_level
-#   MAPPING_0_MEASUREMENT=nuclear_power_plant
-#   MAPPING_0_FIELD=radiation_level
-#   MAPPING_0_TYPE=float
-#
-#   MAPPING_1_TOPIC=my/little/nuclear/plant
-#   MAPPING_1_JSON_KEY=reactivity
-#   MAPPING_1_MEASUREMENT=nuclear_power_plant
-#   MAPPING_1_FIELD=reactivity
-#   MAPPING_1_TYPE=float
-#
+# Mapping with simple JSON payload (using JSON_KEY):
 #   MAPPING_2_TOPIC=my/little/nuclear/plant
-#   MAPPING_2_JSON_FORMULA="round({reactivity} * {radiation_level}) + 42"
+#   MAPPING_2_JSON_KEY=radiation_level
 #   MAPPING_2_MEASUREMENT=nuclear_power_plant
-#   MAPPING_2_FIELD=danger_level
+#   MAPPING_2_FIELD=radiation_level
 #   MAPPING_2_TYPE=float
 #
-# This extracts value from a payload like "{"radiation_level": 90.5, "reactivity": 0.7} and does the calculation
+# This extracts a value from a payload like `{"radiation_level": 90.5, "reactivity": 0.7}`. In this example, it returns the value of the key `radiation_level`, which is 90.5.
+#
+# Mapping with complex JSON payload (using JSON_PATH):
+#
+#  'MAPPING_3_TOPIC' => 'go-e/ATTR',
+#  'MAPPING_3_JSON_PATH' => '$.ccp[2]',
+#  'MAPPING_3_MEASUREMENT' => 'WALLBOX',
+#  'MAPPING_3_FIELD' => 'power',
+#  'MAPPING_3_TYPE' => 'float',
+#
+# This extracts value from a payload like `{"ccp": [1,2,42,3]}`. In this example, it returns the value at the index 2 (third element) of the array `ccp`, which is 42.
+#
+# For JSONPath specification (the `$.` notation) see here:
+# https://goessner.net/articles/JsonPath/
+#
+# Mapping with JSON payload and formula:
+#   MAPPING_4_TOPIC=my/little/nuclear/plant
+#   MAPPING_4_JSON_KEY=radiation_level
+#   MAPPING_4_MEASUREMENT=nuclear_power_plant
+#   MAPPING_4_FIELD=radiation_level
+#   MAPPING_4_TYPE=float
+#
+#   MAPPING_5_TOPIC=my/little/nuclear/plant
+#   MAPPING_5_JSON_KEY=reactivity
+#   MAPPING_5_MEASUREMENT=nuclear_power_plant
+#   MAPPING_5_FIELD=reactivity
+#   MAPPING_5_TYPE=float
+#
+#   MAPPING_6_TOPIC=my/little/nuclear/plant
+#   MAPPING_6_JSON_FORMULA="round({reactivity} * {radiation_level}) + 42"
+#   MAPPING_6_MEASUREMENT=nuclear_power_plant
+#   MAPPING_6_FIELD=danger_level
+#   MAPPING_6_TYPE=float
+#
+# For a payload like `{"radiation_level": 90.5, "reactivity": 0.7}` it calculates a `danger_level` as `round(0.7 * 90.5) + 42`, which is 105.
 #
 # Please note:
-# - The curly braces are used to reference specific keys in the JSON payload
+# - The curly braces are used to reference specific values in the JSON payload. You can use a simple key or a JSONPath
+#   to reference the value to use
 # - The same topic is used for multiple mappings, but different json_keys (or json_formula) are used.
 #
 # For operators allowed in formulas see here:
