Add min/max to mapping
Belongs to #237

--- a/.env.example
+++ b/.env.example
@@ -99,6 +99,8 @@ MAPPING_0_TOPIC=senec/0/ENERGY/GUI_INVERTER_POWER
 MAPPING_0_MEASUREMENT=PV
 MAPPING_0_FIELD=inverter_power
 MAPPING_0_TYPE=integer
+MAPPING_0_MIN=5
+MAPPING_0_MAX=15000
 #
 MAPPING_1_TOPIC=senec/0/ENERGY/GUI_HOUSE_POW
 MAPPING_1_MEASUREMENT=PV
