--- a/.env.example
+++ b/.env.example
@@ -95,7 +95,7 @@ MQTT_PASSWORD=my-mqtt-password
 # For operators allowed in formulas see here:
 # https://github.com/rubysolo/dentaku?tab=readme-ov-file#built-in-operators-and-functions
 #
-# A formula can used for simple values, too. For example, to convert a value from kWh to Wh:
+# A formula can used for simple values, too. For example, to convert a value from kW to W:
 #   MAPPING_7_TOPIC=my/washing-machine/energy
 #   MAPPING_7_MEASUREMENT=Washer
 #   MAPPING_7_FIELD=power
