--- a/.env.example
+++ b/.env.example
@@ -54,14 +54,15 @@ MQTT_PASSWORD=my-mqtt-password
 #
 # This extracts a value from a payload like `{"radiation_level": 90.5, "reactivity": 0.7}`. In this example, it returns the value of the key `radiation_level`, which is 90.5.
 #
-# Mapping with complex JSON payload (using JSON_PATH):
+# Mapping with complex JSON payload (using JSON_PATH) and NULL-TO-ZERO-conversion:
 #   MAPPING_3_TOPIC=go-e/ATTR
 #   MAPPING_3_JSON_PATH=$.ccp[2]
 #   MAPPING_3_MEASUREMENT=WALLBOX
 #   MAPPING_3_FIELD=power
 #   MAPPING_3_TYPE=float
+#   MAPPING_3_NULL_TO_ZERO=true
 #
-# This extracts value from a payload like `{"ccp": [1,2,42,3]}`. In this example, it returns the value at the index 2 (third element) of the array `ccp`, which is 42.
+# This extracts value from a payload like `{"ccp": [1,2,42,3]}`. In this example, it returns the value at the index 2 (third element) of the array `ccp`, which is 42. If the value is `NULL`, it is converted to `0`.
 #
 # For JSONPath specification (the `$.` notation) see here:
 # https://goessner.net/articles/JsonPath/
